--- a/SpaceLaunches/Modules/Common/LaunchDetailTableView/LaunchDetailInfographicTableViewCell.xib
+++ b/SpaceLaunches/Modules/Common/LaunchDetailTableView/LaunchDetailInfographicTableViewCell.xib
@@ -10,32 +10,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="LaunchDetailInfographicTableViewCell" selectionStyle="none" indentationWidth="10" reuseIdentifier="LaunchDetailInfographicTableViewCell" rowHeight="312" id="KGk-i7-Jjw" customClass="LaunchDetailInfographicTableViewCell" customModule="SpaceLaunches" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="LaunchDetailInfographicTableViewCell" selectionStyle="none" indentationWidth="10" reuseIdentifier="LaunchDetailInfographicTableViewCell" id="KGk-i7-Jjw" customClass="LaunchDetailInfographicTableViewCell" customModule="SpaceLaunches" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="312"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="312"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nVi-Sn-vmq">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nVi-Sn-vmq">
                         <rect key="frame" x="8" y="8" width="304" height="296"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="296" id="lsS-zG-2Zn"/>
-                        </constraints>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                 </subviews>
-                <constraints>
-                    <constraint firstAttribute="bottom" secondItem="nVi-Sn-vmq" secondAttribute="bottom" constant="8" id="KLr-S2-1de"/>
-                    <constraint firstItem="nVi-Sn-vmq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Pcx-Xc-TS1"/>
-                    <constraint firstAttribute="trailing" secondItem="nVi-Sn-vmq" secondAttribute="trailing" constant="8" id="bET-Q0-95B"/>
-                    <constraint firstItem="nVi-Sn-vmq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="fVW-0J-8ah"/>
-                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="infographicImageView" destination="nVi-Sn-vmq" id="lgC-1I-vVu"/>
             </connections>
-            <point key="canvasLocation" x="37.681159420289859" y="199.55357142857142"/>
+            <point key="canvasLocation" x="37.681159420289859" y="199.88839285714286"/>
         </tableViewCell>
     </objects>
 </document>
